// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots should match snapshot with checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #F46152;
  background-color: #F46152;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: white;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #9898A6;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        >
          <svg />
        </div>
        <input
          checked=""
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with default checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #F46152;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #9898A6;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled and checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #9898A6;
  background-color: #F46152;
  background-color: #9898A6;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: white;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #9898A6;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
          disabled=""
        >
          <svg />
        </div>
        <input
          checked=""
          class="c7"
          disabled=""
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #9898A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #9898A6;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
          disabled=""
        />
        <input
          class="c7"
          disabled=""
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error and checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #F46152;
  background-color: #F46152;
  border-color: #CB3530;
  background-color: #CB3530;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: white;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #CB3530;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        >
          <svg />
        </div>
        <input
          checked=""
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #F46152;
  border-color: #CB3530;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #CB3530;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot without props 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  border-width: 2px;
  border-color: #F46152;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
  color: #41414A;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1 .c2:active .c4 {
  background-color: rgba(250,185,178,0.75);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.75);
}

.c1:focus-within .c4 {
  background-color: rgba(250,185,178,0.5);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.5);
}

.c1:hover .c4 {
  background-color: rgba(250,185,178,0.25);
  box-shadow: 0 0 0 12px rgba(250,185,178,0.25);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
      </label>
    </div>
  </div>
</div>
`;
